v1.18.0 (#229)
* feature/Service-Noun-Field (#221)

* Updated ERD

* Added migration

* Updated tests with new expected field

Tests are failing

* Updated update request test

* Added field to API resource

* Added field into request validation

* Added field to controller logic

* Added field to update request logic

* Updated API docs

* Fixed failing test

* feature/Search-for-User-by-Organisation-or-Service (#222)

* Added filters to API docs

* Added failing unit tests

* Added more failing tests

* Added custom filters

* Feature/preview update before sending (#224)

* Added preview field to API docs

* Added preview logic to controller

* Added feature test

* Explicitly set the polymorphic fields

* feature/Description-Tab-Review (#225)

* Updated database ERD

* Added offerings migration

* Updated API docs

* Added offerings model and updated relationships

* Updated service tests to include offerings

* Updated controller logic and added validation

* Removed composer script for testing

* Added offerings array to update request

* Quotes are now trimmed on all string inputs (#226)

* feature/Add-images-to-Locations (#227)

* Updated database ERD

* Updated API docs

* Added image_file_id column in a migration

* Added location image logic

* Location image rules updated for update request validation

* feature/Images-of-Service-Locations (#228)

* Added has_image field to location API resource

* Updated databased ERD

* Added image_file_id column in migration

* Added failing feature tests

* Updated API docs

* Added controller logic, request validation and image endpoint
