# resources/views/docs/core/openapi.blade.yaml
@@ -44,6 +44,8 @@ paths:
     $ref: /docs/core/paths/locations.yaml#/index
   /locations/{location}:
     $ref: /docs/core/paths/locations.yaml#/nested
+  /locations/{location}/image.png:
+    $ref: /docs/core/paths/locations.yaml#/image
 
   /notifications:
     $ref: /docs/core/paths/notifications.yaml#/root
@@ -100,6 +102,8 @@ paths:
     $ref: /docs/core/paths/service-locations.yaml#/index
   /service-locations/{service_location}:
     $ref: /docs/core/paths/service-locations.yaml#/nested
+  /service-locations/{service_location}/image.png:
+    $ref: /docs/core/paths/service-locations.yaml#/image
 
   /services:
     $ref: /docs/core/paths/services.yaml#/root
